[tool.poetry]
name = "rugged-brains"
version = "0.1.0"
description = "An environment for the Manning RL course"
authors = ["Guillaume Alleon <guillaume.alleon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.4.1"
gym = "^0.18.0"
numpy = "^1.20.2"
optuna = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
